agregar método de guardar

--- a/src/app/libro/libro/libro.component.html
+++ b/src/app/libro/libro/libro.component.html
@@ -1,6 +1,6 @@
 <div class="libro" (click)="onClicked()">
     <div>
-        {{tituloLibro}}
+        {{ bookTitle }}
     </div>
-    <h3>Libro en Oferta</h3>
+    <h4>Libro en Oferta</h4>
 </div>
