--- a/src/app/libros/libros/libros.component.html
+++ b/src/app/libros/libros/libros.component.html
@@ -1,1 +1,7 @@
-<app-libro (libroClicked)="eliminarLibro(libro)" *ngFor="let libro of libros" [tituloLibro]="libro"></app-libro>
+
+<h1>Mis libros favoritos</h1>
+<form (ngSubmit)="saveBook(f)" #f="ngForm">
+    <input type="text" name="bookName" ngModel required>
+    <button type="submit">Add Book</button>
+</form>
+<app-libro (libroClicked)="deleteBook(book)" *ngFor="let book of books" [bookTitle]="book"></app-libro>
