--- a/src/app/libros/libros/libros.component.html
+++ b/src/app/libros/libros/libros.component.html
@@ -1,7 +1,7 @@
 
 <h1>Mis libros favoritos</h1>
 <form (ngSubmit)="saveBook(f)" #f="ngForm">
-    <input type="text" name="bookName" ngModel required>
+    <input type="text" name="nameBook" ngModel required>
     <button type="submit">Add Book</button>
 </form>
 <app-libro (libroClicked)="deleteBook(book)" *ngFor="let book of books" [bookTitle]="book"></app-libro>
